...
    // MARK: - Setup view elements
    func setupViews() {
        self.title = "Overlays"
        self.navigationItem.rightBarButtonItem = closeButton
        self.navigationController?.isNavigationBarHidden = false
        self.configureCollectionView()
        self.view.accessibilityIdentifier = "OverlaysCollectionView"
        self.view.backgroundColor = .black
        
        // MARK: Navigation bar appearance
        let navigationBarAppearance = UINavigationBarAppearance()
        navigationBarAppearance.configureWithOpaqueBackground()
        navigationBarAppearance.titleTextAttributes = [
...
